--- a/src/main/resources/Etiquetas.properties
+++ b/src/main/resources/Etiquetas.properties
@@ -1,36 +1,20 @@
-#Direct ResourceBundle
-#Sat May 08 20:23:36 CEST 2021
 Accept=Accept
-ApostuAnitzaSortu.btnNewButton.text=Apustua Amaitu
-ApostuAnitzaSortu.btnNewButton_1.text=Apustua Gehitu
-ApostuaSortuGUI.btnNewButton.text=Apostua Egin
-ApostuaSortuGUI.lblNewLabel.text=Zure emaitza\:
-ApostuaSortuGUI.lblNewLabel_1.text=Dirua\:
 Close=Close
 CreateQuery=Log in
 ErrorEventHasFinished=Error\: Event Has Finished
-ErrorNumber=Error\: Introduce a positive number
-ErrorQuery=Error\: Introduce a question
+ErrorNumber=Error\: Enter a positive number
+ErrorQuery=Error\: Enter a question
 ErrorQueryAlreadyExist=Error\: Question Already Exists
 Event=Event
 EventDate=Event Date
 EventN=Event\#
 Events=Events
-GertaerakAurkeratu.btnNewButton.text=Gertaera Aukeratu
-GertaerakAurkeratu.lblNewLabel.text=Emaitzak ipini nahi dituzun gertaera aukeratu\:
-GertaerakSortuGUI.btnNewButton.text=Gertaera sortu
-GertaerakSortuGUI.lblNewLabel.text=Gertaeraren azalpena\:
-GertaerakSortuGUI.lblNewLabel_1.text=New label
 ListEvents=List of events
-MainGUI.btnNewButton.text=Register
 MainTitle=Bets
 MinimumBetPrice=Min Bet 
 NoEvents=There are no events 
 NoQueries=There are no questions yet for the event 
 Price=Price
-PronostikoakSortuGUI.btnNewButton.text=Pronostikoa Sortu
-PronostikoakSortuGUI.lblNewLabel.text=Pronostikoaren kuota\:
-PronostikoakSortuGUI.lblNewLabel_1.text=Pronostikoaren emaitza\:
 Queries=Questions
 Query=Question
 QueryAlreadyExist=Question Already Exists
@@ -39,3 +23,17 @@ QueryN=Question\#
 QueryQueries=Query Questions
 SelectOption=Select Option
 SelectedEvent=Questions for the event
+ApostuAnitzaSortu.btnNewButton.text=End Bet
+ApostuAnitzaSortu.btnNewButton_1.text=Add Bet
+ApostuaSortuGUI.btnNewButton.text=Bet
+ApostuaSortuGUI.lblNewLabel.text=Your result\:
+ApostuaSortuGUI.lblNewLabel_1.text=Credit\:
+GertaerakAurkeratu.btnNewButton.text=Select Event
+GertaerakAurkeratu.lblNewLabel.text=Emaitzak ipini nahi dituzun gertaera aukeratu\:
+GertaerakSortuGUI.btnNewButton.text=Create Event
+GertaerakSortuGUI.lblNewLabel.text=Event description\:
+GertaerakSortuGUI.lblNewLabel_1.text=New label
+MainGUI.btnNewButton.text=Register
+PronostikoakSortuGUI.btnNewButton.text=create prediction
+PronostikoakSortuGUI.lblNewLabel.text=share of the prediction\:
+PronostikoakSortuGUI.lblNewLabel_1.text=Result for the prediction\:
